--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -2,12 +2,36 @@ FROM php:5.6.30-apache
 
 MAINTAINER Miguel Angel Garcia <mgarcia.inf@gmail.com>
 
+RUN apt-get update
+RUN apt-get install -y \
+        apt-utils \
+        libmcrypt-dev \
+        libldb-dev \
+        libldap2-dev \
+        zlib1g-dev \  
+        libicu-dev \
+        openssl \
+        libaio1 \
+        ant \
+        default-jdk \
+        links \
+        git \
+        unzip
+
+RUN ln -s /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/libldap.so && \
+        ln -s /usr/lib/x86_64-linux-gnu/liblber.so /usr/lib/liblber.so
+
+RUN docker-php-ext-install -j$(nproc) \
+        mcrypt \
+        zip \
+        bcmath \ 
+        ldap \
+        intl
+
 # Oracle instantclient
 ADD oracle/instantclient-basic-linux.x64-11.2.0.4.0.zip /tmp/instantclient-basic-linux.x64-11.2.0.4.0.zip
 ADD oracle/instantclient-sdk-linux.x64-11.2.0.4.0.zip /tmp/instantclient-sdk-linux.x64-11.2.0.4.0.zip
 ADD oracle/instantclient-sqlplus-linux.x64-11.2.0.4.0.zip /tmp/instantclient-sqlplus-linux.x64-11.2.0.4.0.zip
-
-RUN apt-get update && apt-get install -y unzip
 
 RUN unzip /tmp/instantclient-basic-linux.x64-11.2.0.4.0.zip -d /usr/local/
 RUN unzip /tmp/instantclient-sdk-linux.x64-11.2.0.4.0.zip -d /usr/local/
