--- a/7.1-centos/Dockerfile
+++ b/7.1-centos/Dockerfile
@@ -27,7 +27,8 @@ RUN yum -y install rh-php71-php-devel \
 
 
 RUN ln -s /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/libldap.so && \
-        ln -s /usr/lib/x86_64-linux-gnu/liblber.so /usr/lib/liblber.so
+        ln -s /usr/lib/x86_64-linux-gnu/liblber.so /usr/lib/liblber.so && \
+        ln -s /opt/rh/rh-php71/root/usr/bin/php /usr/local/bin/php
 
 # Oracle instantclient
 ADD oracle/instantclient-basic-linux.x64-11.2.0.4.0.zip /tmp/instantclient-basic-linux.x64-11.2.0.4.0.zip
@@ -44,7 +45,7 @@ RUN ln -s /usr/local/instantclient/sqlplus /usr/bin/sqlplus
 
 
 RUN echo 'instantclient,/usr/local/instantclient' | pecl install oci8
-ADD php/oci8.ini /etc/opt/rh/rh-php70/php.d/oci8.ini
+ADD php/oci8.ini /etc/opt/rh/rh-php71/php.d/oci8.ini
 
 RUN yum install libaio-devel -y
 RUN yum clean all && rm -rf /var/cache/yum
